Create Layout page

--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -1,17 +1,46 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+<MudLayout>
+    <MudAppBar Elevation="1">
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
+        <MudSpacer />
+        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" href="https://github.com/MudBlazor/MudBlazor" Target="_blank" />
+    </MudAppBar>
+    <MudDrawer @bind-Open="@open" Elevation="1">
+        <MudDrawerHeader>
+            <MudText Typo="Typo.h6">My App</MudText>
+        </MudDrawerHeader>
+        <MudNavMenu Color="Color.Inherit">
+            <MudNavLink Match="NavLinkMatch.All">Assets</MudNavLink>
+            <MudNavLink Match="NavLinkMatch.All">Employees</MudNavLink>
+            <MudPaper Width="250px" Elevation="0">
+                <MudNavMenu>
+                    <MudNavGroup Title="Settings" @bind-Expanded=isExpanded>
+                        <MudNavLink Href="#">Asset types</MudNavLink>
+                        <MudNavLink Href="#">Tags</MudNavLink>
+                    </MudNavGroup>
+                </MudNavMenu>
+            </MudPaper>
+        </MudNavMenu>
+    </MudDrawer>
+    <MudMainContent Class="pt-16 px-16">
+        <MudContainer Class="mt-6">
+            <MudAlert Severity="Severity.Success" Class="mt-16">Text inside MudContainer</MudAlert>
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+
+@code {
+    bool open = true;
+    bool isExpanded = false;
+
+    void ToggleDrawer()
+    {
+        open = !open;
+    }
+}
