did some reconstructions

--- a/src/Web/Client/Pages/Employees.razor
+++ b/src/Web/Client/Pages/Employees.razor
@@ -1,8 +1,8 @@
-﻿@page "/counter"
+﻿@page "/employees"
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Employees</PageTitle>
 
-<h1>Counter</h1>
+<h1>Employees</h1>
 
 <p role="status">Current count: @currentCount</p>
 
