--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -5,31 +5,28 @@
 <MudSnackbarProvider />
 
 <MudLayout>
-    <MudAppBar Elevation="1">
-        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
-        <MudSpacer />
-        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" href="https://github.com/MudBlazor/MudBlazor" Target="_blank" />
-    </MudAppBar>
-    <MudDrawer @bind-Open="@open" Elevation="1">
-        <MudDrawerHeader>
-            <MudText Typo="Typo.h6">My App</MudText>
+    <NavMenu OnToggle="@(() => open = !open)" />
+    <MudDrawer @bind-Open="@open" Elevation="2">
+        <MudDrawerHeader Class="d-flex justify-center">
+            <MudLink Href="/" Underline="Underline.None" Typo="Typo.h5">MRA Assets</MudLink>
         </MudDrawerHeader>
-        <MudNavMenu Color="Color.Inherit">
-            <MudNavLink Match="NavLinkMatch.All">Assets</MudNavLink>
-            <MudNavLink Match="NavLinkMatch.All">Employees</MudNavLink>
-            <MudPaper Width="250px" Elevation="0">
-                <MudNavMenu>
-                    <MudNavGroup Title="Settings" @bind-Expanded=isExpanded>
-                        <MudNavLink Href="#">Asset types</MudNavLink>
-                        <MudNavLink Href="#">Tags</MudNavLink>
-                    </MudNavGroup>
-                </MudNavMenu>
-            </MudPaper>
-        </MudNavMenu>
+        <MudDrawerContainer>
+            <MudDivider />
+        </MudDrawerContainer>
+        <MudPaper Width="250px" Elevation="0" Class="py-3">
+           <MudNavMenu Color="Color.Info">
+               <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Assignment">Assets</MudNavLink>
+               <MudNavLink Href="/employees" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
+               <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings" Expanded="false">
+                   <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types">Asset types</MudNavLink>
+                   <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Tag"  Href="/settings/tags">Tags</MudNavLink>
+               </MudNavGroup>
+           </MudNavMenu>
+        </MudPaper>
     </MudDrawer>
-    <MudMainContent Class="pt-16 px-16">
-        <MudContainer Class="mt-6">
-            <MudAlert Severity="Severity.Success" Class="mt-16">Text inside MudContainer</MudAlert>
+    <MudMainContent Class="pt-16">
+        <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Class="mt-4">
+           @Body
         </MudContainer>
     </MudMainContent>
 </MudLayout>
@@ -39,8 +36,4 @@
     bool open = true;
     bool isExpanded = false;
 
-    void ToggleDrawer()
-    {
-        open = !open;
-    }
 }
