AssetTypes Detail page

--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -1,10 +1,11 @@
 ﻿@page "/settings/asset-types"
 @inject HttpClient Http
-@layout SettingsLayout
+@layout AssetTypesLayout
 
 <PageTitle>Asset types</PageTitle>
 
 <h1>Asset types</h1>
 
 @code {
+    
 }
