--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -9,3 +9,7 @@
 @using Web.Client
 @using Web.Client.Shared
 @using MudBlazor
+@using MRA.AssetsManagement.Web.Client.Shared
+@using AssetsManagement.Web.Client.Services.AssetTypes
+@using System.Text.RegularExpressions
+@using System.ComponentModel.DataAnnotations
