--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -7,7 +7,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Web.Client
-@using Web.Client.Shared
+@using MRA.AssetsManagement.Web.Shared
 @using MudBlazor
 @using MRA.AssetsManagement.Web.Client.Shared
 @using AssetsManagement.Web.Client.Services.AssetTypes
