Change class .icon-container to "d-flex"

--- a/src/Web/Client/Pages/Settings/AssetTypesDetail.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypesDetail.razor
@@ -34,21 +34,21 @@ else
                 </MudItem>
                 <MudSelect Value="@assetTypeIcon" Label="Icon" Variant="Variant.Outlined" Class="mt-3">
                     <MudSelectItem Value="@("Computer")" Class="select-item">
-                        <div class="icon-container">
+                        <div class="d-flex">
                             <MudIcon Icon="@Icons.Material.Outlined.Computer" class="mr-1"/>
                             <span>Computer</span>
                         </div>
                     </MudSelectItem>
                     <MudSelectItem Value="@("Laptop")">
-                        <div class="icon-container">
+                        <div class="d-flex">
                             <MudIcon Icon="@Icons.Material.Outlined.LaptopMac" class="mr-1"/>
                             <span>Laptop</span>
                         </div>
                     </MudSelectItem>
                     <MudSelectItem Value="@("Monitor")">
-                        <div class="icon-container">
+                        <div class="d-flex">
                             <MudIcon Icon="@Icons.Material.Outlined.DesktopWindows" class="mr-1"/>
-                            <span class="icon-text">Monitor</span>
+                            <span>Monitor</span>
                         </div>
                     </MudSelectItem>
                 </MudSelect>
