--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -18,7 +18,7 @@
                <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Assignment">Assets</MudNavLink>
                <MudNavLink Href="/employees" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
                <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings" Expanded="false">
-                   <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types">Asset types</MudNavLink>
+                   <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types/new">Asset types</MudNavLink>
                    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Tag"  Href="/settings/tags">Tags</MudNavLink>
                </MudNavGroup>
            </MudNavMenu>
