--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -30,7 +30,7 @@ else
                               Label="Name" Required="true" RequiredError="Name is required!" TextChanged="AutoGenerateShortName" Immediate="true" />
                 <MudItem Class="d-flex mt-3">
                     <MudTextField T="string" @bind-Value="@assetType.ShortName" Margin="Margin.Dense" Variant=Variant.Outlined Label="Short name" Required="true" RequiredError="Short name is required!" />
-                    <MudCheckBox T="bool" @bind-Value="autoGenerateShortName" Label="Auto Generate"></MudCheckBox>
+                    <MudCheckBox T="bool" @bind-Value="autoGenerateShortName" Label="Auto Generate" CheckedChanged="AutoGenerateShortName" ></MudCheckBox>
                 </MudItem>
                 <MudSelect Value="@assetTypeIcon" Label="Icon" Margin="Margin.Dense" Variant="Variant.Outlined" Class="mt-3">
                     <MudSelectItem Value="@("Computer")">
