--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -1,20 +1,18 @@
 ﻿@page "/settings/asset-types/new"
 @page "/settings/asset-types/{id}"
-@layout AssetTypesLayout
+@layout SettingsLayout
 @inject IAssetTypesService AssetTypesService
 @inject ISnackbar Snackbar
+<PageTitle>Asset Types</PageTitle>
 
-@if (assetType == null)
-{
-    <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="300px" />
-}
-else
-{
-    <MudItem xs="12" sm="7">
-        <MudPaper Class="pa-4">
+
+
+    <MudStack>
+        <MudStack Row="true" Class="d-flex justify-space-between">
+            <MudText Typo="Typo.h4">Asset type</MudText>
             <MudStack Class="mb-3" Row="true">
-                <MudButton Variant="Variant.Filled" Disabled="assetType.Archived" StartIcon="@Icons.Material.Filled.Save" Color="Color.Tertiary" Size="Size.Medium">Save</MudButton>
-                @if (assetType.Archived)
+                <MudButton Variant="Variant.Filled" Disabled="_assetType.Archived" StartIcon="@Icons.Material.Filled.Save" Color="Color.Tertiary" Size="Size.Medium">Save</MudButton>
+                @if (_assetType.Archived)
                 {
                     <MudButton Variant="Variant.Filled" @onclick="Archived" StartIcon="@Icons.Material.Filled.Archive" Color="Color.Secondary" Size="Size.Medium">Restore</MudButton>
                 }
@@ -23,74 +21,88 @@ else
                     <MudButton Variant="Variant.Filled" @onclick="Archived" StartIcon="@Icons.Material.Filled.Unarchive" Color="Color.Secondary" Size="Size.Medium">Archive</MudButton>
                 }
             </MudStack>
-            <MudDivider />
-            <MudForm Disabled=@assetType.Archived>
-                <MudTextField Class="mt-3" T="string" @bind-Value="@assetType.Name"
+        </MudStack>
+
+        <MudDivider />
+        <MudForm Disabled=@_assetType.Archived Style="max-width: 420px" Class="pa-4">
+            @if (_loading)
+            {
+                <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="40px"/>
+                <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="40px"/>
+                <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="40px"/>
+            }
+            else
+            {
+                <MudTextField Class="mt-3" T="string" @bind-Value="@_assetType.Name"
                               Margin="Margin.Dense" Variant=Variant.Outlined
-                              Label="Name" Required="true" RequiredError="Name is required!" TextChanged="AutoGenerateShortName" Immediate="true" />
+                              Label="Name" Required="true" RequiredError="Name is required!" TextChanged="AutoGenerateShortName" Immediate="true"/>
                 <MudItem Class="d-flex mt-3">
-                    <MudTextField T="string" @bind-Value="@assetType.ShortName" Margin="Margin.Dense" Variant=Variant.Outlined Label="Short name" Required="true" RequiredError="Short name is required!" />
-                    <MudCheckBox T="bool" @bind-Value="autoGenerateShortName" Label="Auto Generate" CheckedChanged="AutoGenerateShortName" ></MudCheckBox>
+                    <MudTextField T="string" @bind-Value="@_assetType.ShortName" Margin="Margin.Dense" Variant=Variant.Outlined Label="Short name" Required="true" RequiredError="Short name is required!"/>
+                    <MudCheckBox T="bool" @bind-Value="_autoGenerateShortName" Label="Auto Generate" CheckedChanged="AutoGenerateShortName"></MudCheckBox>
                 </MudItem>
-                <MudSelect Value="@assetTypeIcon" Label="Icon" Margin="Margin.Dense" Variant="Variant.Outlined" Class="mt-3">
+                <MudSelect Value="@_assetTypeIcon" Label="Icon" Margin="Margin.Dense" Variant="Variant.Outlined" Class="mt-3">
                     <MudSelectItem Value="@("Computer")">
                         <div class="d-flex">
-                            <MudIcon Icon="@Icons.Material.Outlined.Computer" Class="mr-1" />
+                            <MudIcon Icon="@Icons.Material.Outlined.Computer" Class="mr-1"/>
                             <span>Computer</span>
                         </div>
                     </MudSelectItem>
                     <MudSelectItem Value="@("Laptop")">
                         <div class="d-flex">
-                            <MudIcon Icon="@Icons.Material.Outlined.LaptopMac" Class="mr-1" />
+                            <MudIcon Icon="@Icons.Material.Outlined.LaptopMac" Class="mr-1"/>
                             <span>Laptop</span>
                         </div>
                     </MudSelectItem>
                     <MudSelectItem Value="@("Monitor")">
                         <div class="d-flex">
-                            <MudIcon Icon="@Icons.Material.Outlined.DesktopWindows" Class="mr-1" />
+                            <MudIcon Icon="@Icons.Material.Outlined.DesktopWindows" Class="mr-1"/>
                             <span>Monitor</span>
                         </div>
                     </MudSelectItem>
                 </MudSelect>
-            </MudForm>
-        </MudPaper>
-    </MudItem>
-}
+            }
+           
+        </MudForm>
+    </MudStack>
 
 
 
 @code {
-    [Parameter]
-    public string? Id { get; set; }
+    [Parameter] public string? Id { get; set; }
 
-    AssetType assetType = null!;
-    string assetTypeIcon = "";
-    bool autoGenerateShortName = false;
+    AssetType _assetType;
+    bool _loading = false;
+    string _assetTypeIcon = "";
+    bool _autoGenerateShortName = false;
 
     protected override async Task OnParametersSetAsync()
     {
-        assetType = new AssetType();
-        autoGenerateShortName = false;
+        _loading = true;
+        _assetType = new AssetType();
+        _autoGenerateShortName = false;
         if (Id is not null)
         {
-            assetType = await AssetTypesService.GetAssetTypeById(Id);
+            _assetType = await AssetTypesService.GetAssetTypeById(Id);
         }
-        assetTypeIcon = assetType.Name;
+
+        _loading = false;
+
+        _assetTypeIcon = _assetType.Name;
         StateHasChanged();
     }
 
 
     private void AutoGenerateShortName()
     {
-        if (autoGenerateShortName && !string.IsNullOrEmpty(assetType.Name))
+        if (_autoGenerateShortName && !string.IsNullOrEmpty(_assetType.Name))
         {
-            assetType.ShortName = AssetTypesService.GenerateShortName(assetType.Name);
+            _assetType.ShortName = AssetTypesService.GenerateShortName(_assetType.Name);
         }
-
     }
 
     private void Archived()
     {
-        assetType.Archived = !assetType.Archived;
+        _assetType.Archived = !_assetType.Archived;
     }
+
 }
