--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -17,8 +17,8 @@
            <MudNavMenu Color="Color.Info">
                <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Assignment">Assets</MudNavLink>
                <MudNavLink Href="/employees" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
-               <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings" Expanded="false">
-                   <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types/new">Asset types</MudNavLink>
+               <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings"  Expanded="true">
+                   <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types">Asset types</MudNavLink>
                    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Tag"  Href="/settings/tags">Tags</MudNavLink>
                </MudNavGroup>
            </MudNavMenu>
@@ -34,6 +34,4 @@
 
 @code {
     bool open = true;
-    bool isExpanded = false;
-
 }
