--- a/src/Web/Client/Shared/SettingsLayout.razor
+++ b/src/Web/Client/Shared/SettingsLayout.razor
@@ -1,17 +1,18 @@
 @inherits LayoutComponentBase
 @layout MainLayout
 @inject IAssetTypesService AssetTypesService
+@implements IDisposable
 <MudGrid>
     <MudItem md="3">
         <MudPaper Class="pa-2">
             <MudStack Spacing="4">
                 <MudStack Row="true">
                     <MudTextField @bind-Value="@_normalText" Label="Search" Margin="Margin.Dense" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search" />
-                    <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Primary" aria-label="github" Href="settings/asset-types/new"></MudIconButton>
+                    <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Primary" aria-label="github" Href="settings/asset-types"></MudIconButton>
                 </MudStack>
                 <MudDivider />
-                <MudNavMenu Bordered="true">
-                    @if (assetTypes == null)
+                <MudNavMenu Style="overflow: auto; height: 500px" Bordered="true">
+                    @if (AssetTypesService.AssetTypes == null)
                     {
                         <MudSkeleton Animation="Animation.Wave" />
                         <MudSkeleton Animation="Animation.Wave" />
@@ -19,10 +20,9 @@
                     }
                     else
                     {
-                        @foreach (var assetsType in assetTypes)
+                        @foreach (var assetsType in AssetTypesService.AssetTypes)
                         {
-                            <MudNavLink  Href="@($"/settings/asset-types/{assetsType.Id}")" Icon="@Icons.Material.Outlined.Rectangle">
-
+                            <MudNavLink Style="@(assetsType.Archived ? "opacity: 0.4" : "")" Href="@($"/settings/asset-types/{assetsType.Id}#form")" Icon="@assetsType.Icon">
                                 @assetsType.Name
                             </MudNavLink>
                         }
@@ -38,7 +38,7 @@
     </MudItem>
 </MudGrid>
 
-    
+
 
 
 
@@ -46,11 +46,16 @@
 
 @code {
     string _normalText = "";
-    List<AssetType> assetTypes = null!;
 
     protected override async Task OnInitializedAsync()
     {
-        assetTypes = await AssetTypesService.GetAssetTypes();
+        await AssetTypesService.GetAssetTypes();
+        AssetTypesService.OnChange += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        AssetTypesService.OnChange -= StateHasChanged;
     }
 
 }
