AssetTypes Detail page (#7)
* AssetTypes Detail page

* AssetTypes Detail page

* Few Archived button changes

* commit

* Change class .icon-container to "d-flex"

* Change icons color and refactor AssetTypesService

* Changing routes, auto generate short name button logic and name, icon colors and few routes

* few mudcheckbox changes

* remove pack ref

* improved settings

* menu items

* changes

* Add Save Button and few changes

* style changes

---------

Co-authored-by: Abbos Sidiqov <abbosidiqov@outlook.com>
Co-authored-by: Abbos Sidiqov <48281953+SidiqovAbbos@users.noreply.github.com>

--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -17,8 +17,8 @@
            <MudNavMenu Color="Color.Info">
                <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Assignment">Assets</MudNavLink>
                <MudNavLink Href="/employees" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
-               <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings" Expanded="false">
-                   <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types">Asset types</MudNavLink>
+               <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings"  Expanded="true">
+                   <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types">Asset types</MudNavLink>
                    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Tag"  Href="/settings/tags">Tags</MudNavLink>
                </MudNavGroup>
            </MudNavMenu>
@@ -31,9 +31,6 @@
     </MudMainContent>
 </MudLayout>
 
-
 @code {
     bool open = true;
-    bool isExpanded = false;
-
 }
