--- a/src/Web/Client/Shared/SettingsLayout.razor
+++ b/src/Web/Client/Shared/SettingsLayout.razor
@@ -1,26 +1,38 @@
 @inherits LayoutComponentBase
 @layout MainLayout
-
+@inject IAssetTypesService AssetTypesService
+@implements IDisposable
 <MudGrid>
     <MudItem md="3">
         <MudPaper Class="pa-2">
             <MudStack Spacing="4">
                 <MudStack Row="true">
-                    <MudTextField @bind-Value="@_normalText"  Label="Search" Margin="Margin.Dense" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search"/>
-                    <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Primary" aria-label="github"></MudIconButton>
+                    <MudTextField @bind-Value="@_normalText" Label="Search" Margin="Margin.Dense" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search" />
+                    <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Primary" aria-label="github" Href="settings/asset-types"></MudIconButton>
                 </MudStack>
-                    <MudDivider />
-                 <MudNavMenu Bordered="true">
-                    <MudNavLink Href="/dashboard">Dashboard</MudNavLink>
-                    <MudNavLink Match="NavLinkMatch.Prefix" Href="/components/navmenu">Servers</MudNavLink>
-                    <MudNavLink Href="/billing" Disabled="true">Billing</MudNavLink>
-                    <MudNavLink Href="/about">About</MudNavLink>
+                <MudDivider />
+                <MudNavMenu Bordered="true">
+                    @if (AssetTypesService.AssetTypes == null)
+                    {
+                        <MudSkeleton Animation="Animation.Wave" />
+                        <MudSkeleton Animation="Animation.Wave" />
+                        <MudSkeleton Animation="Animation.Wave" />
+                    }
+                    else
+                    {
+                        @foreach (var assetsType in AssetTypesService.AssetTypes)
+                        {
+                            <MudNavLink Style="@(assetsType.Archived ? "opacity: 0.4" : "")" Href="@($"/settings/asset-types/{assetsType.Id}#form")" Icon="@assetsType.Icon">
+                                @assetsType.Name
+                            </MudNavLink>
+                        }
+                    }
                 </MudNavMenu>
             </MudStack>
         </MudPaper>
     </MudItem>
     <MudItem md="9">
-        <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
+        <MudPaper Class="pa-3">
             @Body
         </MudPaper>
     </MudItem>
@@ -28,6 +40,22 @@
 
 
 
+
+
+
+
 @code {
     string _normalText = "";
+
+    protected override async Task OnInitializedAsync()
+    {
+        await AssetTypesService.GetAssetTypes();
+        AssetTypesService.OnChange += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        AssetTypesService.OnChange -= StateHasChanged;
+    }
+
 }
