--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -1,10 +1,134 @@
 ﻿@page "/settings/asset-types"
-@inject HttpClient Http
+@page "/settings/asset-types/{id}"
 @layout SettingsLayout
+@inject IAssetTypesService AssetTypesService
+@inject ISnackbar Snackbar
+<PageTitle>Asset Types</PageTitle>
 
-<PageTitle>Asset types</PageTitle>
 
-<h1>Asset types</h1>
+<MudStack>
+    <MudStack Row="true" Class="d-flex justify-space-between">
+        <MudText Typo="Typo.h4">Asset type</MudText>
+        <MudStack Class="mb-3" Row="true">
+            <MudButton Variant="Variant.Filled" @onclick=CreateOrUpdate Disabled="_assetType.Archived" StartIcon="@Icons.Material.Filled.Save" Color="Color.Tertiary" Size="Size.Medium">Save</MudButton>
+            @if (_assetType.Archived)
+            {
+                <MudButton Variant="Variant.Filled" @onclick="Restore" Disabled=@(string.IsNullOrEmpty(Id) ? true : false) StartIcon="@Icons.Material.Filled.Archive" Color="Color.Secondary" Size="Size.Medium">Restore</MudButton>
+            }
+            else
+            {
+                <MudButton Variant="Variant.Filled" @onclick="Archive" Disabled=@(string.IsNullOrEmpty(Id) ? true : false) StartIcon="@Icons.Material.Filled.Unarchive" Color="Color.Secondary" Size="Size.Medium">Archive</MudButton>
+            }
+        </MudStack>
+    </MudStack>
+
+    <MudDivider/>
+    <MudForm Disabled=@_assetType.Archived Style="max-width: 420px" Class="pa-4">
+        @if (_loading)
+        {
+            <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="40px"/>
+            <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="40px"/>
+            <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="40px"/>
+        }
+        else
+        {
+            <MudTextField Class="mt-3" T="string" @bind-Value="@_assetType.Name"
+                          Margin="Margin.Dense" Variant=Variant.Outlined
+                          Label="Name" Required="true" RequiredError="Name is required!" TextChanged="AutoGenerateShortName" Immediate="true"/>
+            <MudItem Class="d-flex mt-3">
+                <MudTextField T="string" @bind-Value="@_assetType.ShortName" Margin="Margin.Dense" Variant=Variant.Outlined Label="Short name" Required="true" RequiredError="Short name is required!"/>
+                <MudCheckBox T="bool" @bind-Value="_autoGenerateShortName" Label="Auto Generate" CheckedChanged="AutoGenerateShortName"></MudCheckBox>
+            </MudItem>
+            <MudSelect @bind-Value="_assetType.Icon" Immediate=true Label="Icon" Margin="Margin.Dense" Variant="Variant.Outlined" Class="mt-3">
+                <MudSelectItem Value="@(Icons.Material.Outlined.Computer)">
+                    <div class="d-flex">
+                        <MudIcon Icon="@Icons.Material.Outlined.Computer" Class="mr-1" />
+                        <span>Computer</span>
+                    </div>
+                </MudSelectItem>
+                <MudSelectItem Value="@(Icons.Material.Outlined.LaptopMac)">
+                    <div class="d-flex">
+                        <MudIcon Icon="@Icons.Material.Outlined.LaptopMac" Class="mr-1" />
+                        <span>Laptop</span>
+                    </div>
+                </MudSelectItem>
+                <MudSelectItem Value="@(Icons.Material.Outlined.DesktopWindows)">
+                    <div class="d-flex">
+                        <MudIcon Icon="@Icons.Material.Outlined.DesktopWindows" Class="mr-1" />
+                        <span>Monitor</span>
+                    </div>
+                </MudSelectItem>
+            </MudSelect>
+        }
+
+    </MudForm>
+</MudStack>
+
 
 @code {
+    [Parameter] public string? Id { get; set; }
+
+    AssetType _assetType;
+    bool _loading = false;
+    bool _autoGenerateShortName = false;
+
+    protected override async Task OnParametersSetAsync()
+    {
+        _loading = true;
+        _assetType = new AssetType();
+        _autoGenerateShortName = false;
+        if (Id is not null)
+        {
+            _assetType = await AssetTypesService.GetAssetTypeById(Id);
+        }
+
+        _loading = false;
+
+        StateHasChanged();
+    }
+
+
+    private void AutoGenerateShortName()
+    {
+        if (_autoGenerateShortName && !string.IsNullOrEmpty(_assetType.Name))
+        {
+            _assetType.ShortName = AssetTypesService.GenerateShortName(_assetType.Name);
+        }
+    }
+
+    private async void CreateOrUpdate()
+    {
+        if (Id is not null)
+        {
+            await AssetTypesService.Update(_assetType);
+        }
+        else
+        {
+            CreateAssetTypeDto newAssetType = new CreateAssetTypeDto();
+            {
+                newAssetType.Name = _assetType.Name;
+                newAssetType.ShortName = _assetType.ShortName;
+                newAssetType.Icon = _assetType.Icon;
+            }
+
+            await AssetTypesService.Create(newAssetType);
+            _assetType = new AssetType();
+            StateHasChanged();
+        }
+
+    }
+
+    private async void Archive()
+    {
+        _assetType.Archived = !_assetType.Archived;
+        await AssetTypesService.Archive(_assetType.Id);
+    }
+
+    private async void Restore()
+    {
+        _assetType.Archived = !_assetType.Archived;
+        await AssetTypesService.Restore(_assetType.Id);
+
+    }
+
 }
