--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -7,5 +7,9 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Web.Client
-@using Web.Client.Shared
+@using MRA.AssetsManagement.Web.Shared
 @using MudBlazor
+@using MRA.AssetsManagement.Web.Client.Shared
+@using AssetsManagement.Web.Client.Services.AssetTypes
+@using System.Text.RegularExpressions
+@using System.ComponentModel.DataAnnotations
