fixed shared dependencies

--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -1,5 +1,7 @@
 ﻿@page "/settings/asset-types"
 @page "/settings/asset-types/{id}"
+@using MRA.AssetsManagement.Web.Shared.AssetTypes
+@using MRA.AssetsManagement.Web.Client.Common.Extensions
 @layout SettingsLayout
 @inject IAssetTypesService AssetTypesService
 @inject ISnackbar Snackbar
@@ -10,8 +12,8 @@
     <MudStack Row="true" Class="d-flex justify-space-between">
         <MudText Typo="Typo.h4">Asset type</MudText>
         <MudStack Class="mb-3" Row="true">
-            <MudButton Variant="Variant.Filled" @onclick=CreateOrUpdate Disabled="_assetType.Archived" StartIcon="@Icons.Material.Filled.Save" Color="Color.Tertiary" Size="Size.Medium">Save</MudButton>
-            @if (_assetType.Archived)
+            <MudButton Variant="Variant.Filled" @onclick=CreateOrUpdate Disabled="_getAssetType.Archived" StartIcon="@Icons.Material.Filled.Save" Color="Color.Tertiary" Size="Size.Medium">Save</MudButton>
+            @if (_getAssetType.Archived)
             {
                 <MudButton Variant="Variant.Filled" @onclick="Restore" Disabled=@(string.IsNullOrEmpty(Id) ? true : false) StartIcon="@Icons.Material.Filled.Archive" Color="Color.Secondary" Size="Size.Medium">Restore</MudButton>
             }
@@ -23,7 +25,7 @@
     </MudStack>
 
     <MudDivider/>
-    <MudForm Disabled=@_assetType.Archived Style="max-width: 420px" Class="pa-4">
+    <MudForm Disabled=@_getAssetType.Archived Style="max-width: 420px" Class="pa-4">
         @if (_loading)
         {
             <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="40px"/>
@@ -32,14 +34,14 @@
         }
         else
         {
-            <MudTextField Class="mt-3" T="string" @bind-Value="@_assetType.Name"
+            <MudTextField Class="mt-3" T="string" @bind-Value="@_getAssetType.Name"
                           Margin="Margin.Dense" Variant=Variant.Outlined
                           Label="Name" Required="true" RequiredError="Name is required!" TextChanged="AutoGenerateShortName" Immediate="true"/>
             <MudItem Class="d-flex mt-3">
-                <MudTextField T="string" @bind-Value="@_assetType.ShortName" Margin="Margin.Dense" Variant=Variant.Outlined Label="Short name" Required="true" RequiredError="Short name is required!"/>
+                <MudTextField T="string" @bind-Value="@_getAssetType.ShortName" Margin="Margin.Dense" Variant=Variant.Outlined Label="Short name" Required="true" RequiredError="Short name is required!"/>
                 <MudCheckBox T="bool" @bind-Value="_autoGenerateShortName" Label="Auto Generate" CheckedChanged="AutoGenerateShortName"></MudCheckBox>
             </MudItem>
-            <MudSelect @bind-Value="_assetType.Icon" Immediate=true Label="Icon" Margin="Margin.Dense" Variant="Variant.Outlined" Class="mt-3">
+            <MudSelect @bind-Value="_getAssetType.Icon" Immediate=true Label="Icon" Margin="Margin.Dense" Variant="Variant.Outlined" Class="mt-3">
                 <MudSelectItem Value="@(Icons.Material.Outlined.Computer)">
                     <div class="d-flex">
                         <MudIcon Icon="@Icons.Material.Outlined.Computer" Class="mr-1" />
@@ -68,18 +70,18 @@
 @code {
     [Parameter] public string? Id { get; set; }
 
-    AssetType _assetType;
+    GetAssetType _getAssetType;
     bool _loading = false;
     bool _autoGenerateShortName = false;
 
     protected override async Task OnParametersSetAsync()
     {
         _loading = true;
-        _assetType = new AssetType();
+        _getAssetType = new GetAssetType();
         _autoGenerateShortName = false;
         if (Id is not null)
         {
-            _assetType = await AssetTypesService.GetAssetTypeById(Id);
+            _getAssetType = await AssetTypesService.GetAssetTypeById(Id);
         }
 
         _loading = false;
@@ -90,9 +92,9 @@
 
     private void AutoGenerateShortName()
     {
-        if (_autoGenerateShortName && !string.IsNullOrEmpty(_assetType.Name))
+        if (_autoGenerateShortName && !string.IsNullOrEmpty(_getAssetType.Name))
         {
-            _assetType.ShortName = AssetTypesService.GenerateShortName(_assetType.Name);
+            _getAssetType.ShortName = _getAssetType.Name.ToShortName();
         }
     }
 
@@ -100,19 +102,19 @@
     {
         if (Id is not null)
         {
-            await AssetTypesService.Update(_assetType);
+            await AssetTypesService.Update(_getAssetType);
         }
         else
         {
-            CreateAssetTypeDto newAssetType = new CreateAssetTypeDto();
+            CreateAssetTypeRequest newAssetType = new CreateAssetTypeRequest();
             {
-                newAssetType.Name = _assetType.Name;
-                newAssetType.ShortName = _assetType.ShortName;
-                newAssetType.Icon = _assetType.Icon;
+                newAssetType.Name = _getAssetType.Name;
+                newAssetType.ShortName = _getAssetType.ShortName;
+                newAssetType.Icon = _getAssetType.Icon;
             }
 
             await AssetTypesService.Create(newAssetType);
-            _assetType = new AssetType();
+            _getAssetType = new GetAssetType();
             StateHasChanged();
         }
 
@@ -120,14 +122,14 @@
 
     private async void Archive()
     {
-        _assetType.Archived = !_assetType.Archived;
-        await AssetTypesService.Archive(_assetType.Id);
+        _getAssetType.Archived = !_getAssetType.Archived;
+        await AssetTypesService.Archive(_getAssetType.Id);
     }
 
     private async void Restore()
     {
-        _assetType.Archived = !_assetType.Archived;
-        await AssetTypesService.Restore(_assetType.Id);
+        _getAssetType.Archived = !_getAssetType.Archived;
+        await AssetTypesService.Restore(_getAssetType.Id);
 
     }
 
